tune/example/Drell-Yan/master/condor_output/P4_dir1/job.38612890.0.err
--------------------------------------------------------------------------
No OpenFabrics connection schemes reported that they were able to be
used on a specific port.  As such, the openib BTL (OpenFabrics
support) will be disabled for this port.

  Local host:           compute-21-25
  Local device:         mlx5_bond_0
  Local port:           1
  CPCs attempted:       rdmacm, udcm
--------------------------------------------------------------------------
--------------------------------------------------------------------------
Open MPI failed an OFI Libfabric library call (fi_endpoint).  This is highly
unusual; your job may behave unpredictably (and/or abort) after this.

  Local host: compute-21-25
  Location: mtl_ofi_component.c:513
  Error: Invalid argument (22)
--------------------------------------------------------------------------
--------------------------------------------------------------------------
No OpenFabrics connection schemes reported that they were able to be
used on a specific port.  As such, the openib BTL (OpenFabrics
support) will be disabled for this port.

  Local host:           compute-21-25
  Local device:         mlx5_bond_0
  Local port:           1
  CPCs attempted:       rdmacm, udcm
--------------------------------------------------------------------------
--------------------------------------------------------------------------
Open MPI failed an OFI Libfabric library call (fi_endpoint).  This is highly
unusual; your job may behave unpredictably (and/or abort) after this.

  Local host: compute-21-25
  Location: mtl_ofi_component.c:513
  Error: Invalid argument (22)
--------------------------------------------------------------------------
--------------------------------------------------------------------------
No OpenFabrics connection schemes reported that they were able to be
used on a specific port.  As such, the openib BTL (OpenFabrics
support) will be disabled for this port.

  Local host:           compute-21-25
  Local device:         mlx5_bond_0
  Local port:           1
  CPCs attempted:       rdmacm, udcm
--------------------------------------------------------------------------
--------------------------------------------------------------------------
Open MPI failed an OFI Libfabric library call (fi_endpoint).  This is highly
unusual; your job may behave unpredictably (and/or abort) after this.

  Local host: compute-21-25
  Location: mtl_ofi_component.c:513
  Error: Invalid argument (22)
--------------------------------------------------------------------------
 /home/moritz.pabst/Programs/local/lib64/python3.9/site-packages/apprentice/tools.py:320: NumbaWarning:
Compilation is falling back to object mode WITHOUT looplifting enabled because Function "gradientRecursionFast" failed type inference due to: non-precise type pyobject
During: typing of argument at /home/moritz.pabst/Programs/local/lib64/python3.9/site-packages/apprentice/tools.py (338)

File "../../Programs/local/lib64/python3.9/site-packages/apprentice/tools.py", line 338:
def gradientRecursionFast(X, struct, jacfac, NNZ, sred):
    <source elided>

    for coord, (RR, nz) in enumerate(zip(W,NNZ)):
    ^

 /home/moritz.pabst/Programs/local/lib64/python3.9/site-packages/apprentice/appset.py:38: NumbaWarning:
Compilation is falling back to object mode WITHOUT looplifting enabled because Function "prime" failed type inference due to: No implementation of function Function(<built-in function getitem>) found for signature:
 
 >>> getitem(array(float64, 2d, C), Tuple(slice<a:b>, UniTuple(array(int64, 1d, C) x 1)))
 
There are 22 candidate implementations:
   - Of which 20 did not match due to:
   Overload of function 'getitem': File: <numerous>: Line N/A.
     With argument(s): '(array(float64, 2d, C), Tuple(slice<a:b>, UniTuple(array(int64, 1d, C) x 1)))':
    No match.
   - Of which 2 did not match due to:
   Overload in function 'GetItemBuffer.generic': File: numba/core/typing/arraydecl.py: Line 211.
     With argument(s): '(array(float64, 2d, C), Tuple(slice<a:b>, UniTuple(array(int64, 1d, C) x 1)))':
    Rejected as the implementation raised a specific error:
      NumbaTypeError: Unsupported array index type UniTuple(array(int64, 1d, C) x 1) in Tuple(slice<a:b>, UniTuple(array(int64, 1d, C) x 1))
  raised from /home/moritz.pabst/Programs/local/lib64/python3.9/site-packages/numba/core/typing/arraydecl.py:104

During: typing of intrinsic-call at /home/moritz.pabst/Programs/local/lib64/python3.9/site-packages/apprentice/appset.py (42)

File "../../Programs/local/lib64/python3.9/site-packages/apprentice/appset.py", line 42:
def prime(GREC, COEFF, dim, NNZ):
    <source elided>
    for i in range(dim):
        ret[:,i] = np.sum(COEFF[:,NNZ[i]] * GREC[i, NNZ[i]], axis=2).flatten()
        ^

 /home/moritz.pabst/Programs/local/lib64/python3.9/site-packages/apprentice/appset.py:45: NumbaWarning:
Compilation is falling back to object mode WITHOUT looplifting enabled because Function "doubleprime" failed type inference due to: non-precise type array(pyobject, 2d, C)
During: typing of argument at /home/moritz.pabst/Programs/local/lib64/python3.9/site-packages/apprentice/appset.py (48)

File "../../Programs/local/lib64/python3.9/site-packages/apprentice/appset.py", line 48:
def doubleprime(dim, xs, NSEL, HH, HNONZ, EE, COEFF):
    <source elided>
    ret = np.empty((dim, dim, NSEL), dtype=np.float64)
    for numx in range(dim):
    ^

--------------------------------------------------------------------------
No OpenFabrics connection schemes reported that they were able to be
used on a specific port.  As such, the openib BTL (OpenFabrics
support) will be disabled for this port.

  Local host:           compute-21-25
  Local device:         mlx5_bond_0
  Local port:           1
  CPCs attempted:       rdmacm, udcm
--------------------------------------------------------------------------
--------------------------------------------------------------------------
Open MPI failed an OFI Libfabric library call (fi_endpoint).  This is highly
unusual; your job may behave unpredictably (and/or abort) after this.

  Local host: compute-21-25
  Location: mtl_ofi_component.c:513
  Error: Invalid argument (22)
--------------------------------------------------------------------------
 /home/moritz.pabst/Programs/local/lib64/python3.9/site-packages/apprentice/tools.py:320: NumbaWarning:
Compilation is falling back to object mode WITHOUT looplifting enabled because Function "gradientRecursionFast" failed type inference due to: non-precise type pyobject
During: typing of argument at /home/moritz.pabst/Programs/local/lib64/python3.9/site-packages/apprentice/tools.py (338)

File "../../Programs/local/lib64/python3.9/site-packages/apprentice/tools.py", line 338:
def gradientRecursionFast(X, struct, jacfac, NNZ, sred):
    <source elided>

    for coord, (RR, nz) in enumerate(zip(W,NNZ)):
    ^

 /home/moritz.pabst/Programs/local/lib64/python3.9/site-packages/apprentice/appset.py:38: NumbaWarning:
Compilation is falling back to object mode WITHOUT looplifting enabled because Function "prime" failed type inference due to: No implementation of function Function(<built-in function getitem>) found for signature:
 
 >>> getitem(array(float64, 2d, C), Tuple(slice<a:b>, UniTuple(array(int64, 1d, C) x 1)))
 
There are 22 candidate implementations:
   - Of which 20 did not match due to:
   Overload of function 'getitem': File: <numerous>: Line N/A.
     With argument(s): '(array(float64, 2d, C), Tuple(slice<a:b>, UniTuple(array(int64, 1d, C) x 1)))':
    No match.
   - Of which 2 did not match due to:
   Overload in function 'GetItemBuffer.generic': File: numba/core/typing/arraydecl.py: Line 211.
     With argument(s): '(array(float64, 2d, C), Tuple(slice<a:b>, UniTuple(array(int64, 1d, C) x 1)))':
    Rejected as the implementation raised a specific error:
      NumbaTypeError: Unsupported array index type UniTuple(array(int64, 1d, C) x 1) in Tuple(slice<a:b>, UniTuple(array(int64, 1d, C) x 1))
  raised from /home/moritz.pabst/Programs/local/lib64/python3.9/site-packages/numba/core/typing/arraydecl.py:104

During: typing of intrinsic-call at /home/moritz.pabst/Programs/local/lib64/python3.9/site-packages/apprentice/appset.py (42)

File "../../Programs/local/lib64/python3.9/site-packages/apprentice/appset.py", line 42:
def prime(GREC, COEFF, dim, NNZ):
    <source elided>
    for i in range(dim):
        ret[:,i] = np.sum(COEFF[:,NNZ[i]] * GREC[i, NNZ[i]], axis=2).flatten()
        ^

 /home/moritz.pabst/Programs/local/lib64/python3.9/site-packages/apprentice/appset.py:45: NumbaWarning:
Compilation is falling back to object mode WITHOUT looplifting enabled because Function "doubleprime" failed type inference due to: non-precise type array(pyobject, 2d, C)
During: typing of argument at /home/moritz.pabst/Programs/local/lib64/python3.9/site-packages/apprentice/appset.py (48)

File "../../Programs/local/lib64/python3.9/site-packages/apprentice/appset.py", line 48:
def doubleprime(dim, xs, NSEL, HH, HNONZ, EE, COEFF):
    <source elided>
    ret = np.empty((dim, dim, NSEL), dtype=np.float64)
    for numx in range(dim):
    ^

